--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - sudo apt-get update -y
   - sudo apt-get install criterion-dev -y
   - sudo apt-get install gcovr -y
+  - sudo apt-get install g++-7
 
 jobs:
   include:
