--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,22 @@
 langage: cpp
-compiler: g++
+compiler: gcc
 
 addons:
  sonarcloud: true
- apt:
-  sources:
-    - ubuntu-toolchain-r-test
-  packages:
-    - g++-7
 
 before_install:
   - sudo add-apt-repository ppa:snaipewastaken/ppa -y
   - sudo apt-get update -y
   - sudo apt-get install criterion-dev -y
   - sudo apt-get install gcovr -y
-  - sudo apt-get install g++-7
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install: 
+  # C++17
+  - sudo apt-get install -qq g++-6
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+
 
 jobs:
   include:
