--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 langage: cpp
-compiler: g++ -std=c++17
+compiler: gcc
 
 addons:
  sonarcloud: true
@@ -9,6 +9,14 @@ before_install:
   - sudo apt-get update -y
   - sudo apt-get install criterion-dev -y
   - sudo apt-get install gcovr -y
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install: 
+  # C++17
+  - sudo apt-get install -qq g++-6
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+
 
 jobs:
   include:
